# FPS-game

./: .gitignore  DEPLOY.md  README.md  index.js  package-lock.json  package.json  railway.json
.github/workflows/: ci.yml
game/: CMakeLists.txt  README.md
game/assets/: README.md
game/src/: main.cpp  server_main.cpp
game/src/ai/: Bot.cpp  Bot.h  Nav.cpp  Nav.h
game/src/core/: App.cpp  App.h  Cli.cpp  Cli.h  Config.h  Math.h
game/src/net/: NetClient.cpp  NetClient.h  NetServer.cpp  NetServer.h  Protocol.h
game/src/player/: Player.cpp  Player.h
game/src/render/: Hud.cpp  Hud.h  SoundBank.cpp  SoundBank.h  ViewModel.cpp  ViewModel.h
game/src/sim/: Input.h
game/src/weapons/: Smoke.cpp  Smoke.h  Weapon.cpp  Weapon.h
game/src/world/: Map.cpp  Map.h
launcher/: .env.example  README.md  index.html  package.json  tsconfig.json  vercel.json  vite.config.ts
launcher/electron/: main.ts  preload.ts
launcher/src/: App.tsx  styles.css
launcher/src/hooks/: useSocket.ts
launcher/src/pages/: Downloads.tsx  GameSetup.tsx  MainMenu.tsx  Matchmaking.tsx  Settings.tsx
launcher/src/types/: global.d.ts  protocol.ts
server/: README.md  package.json  railway.json  tsconfig.json
server/src/: gameServerPool.ts  index.ts  matchmaker.ts  types.ts
shared/: protocol.md
